build/log/idf_py_stderr_output_12710
Command: make -j 10 all
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c: In function 'spiStartTransaction':
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:519:13: warning: unused variable 'currTByte' [-Wunused-variable]
  519 |     uint8_t currTByte = 0, currTBit;
      |             ^~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:515:14: warning: unused variable 'rxBuf' [-Wunused-variable]
  515 |     uint8_t *rxBuf = (uint8_t*)dev->rBuff;
      |              ^~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:514:14: warning: unused variable 'txBuf' [-Wunused-variable]
  514 |     uint8_t *txBuf = (uint8_t*)dev->tBuff;
      |              ^~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c: In function 'destroySPIDevice':
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:648:10: error: 'spiDev_t' has no member named 'rBuffInd'; did you mean 'rBuffIndex'?
  648 |     dev->rBuffInd = 0;
      |          ^~~~~~~~
      |          rBuffIndex
make[2]: *** [esp-idf/spi/CMakeFiles/__idf_spi.dir/build.make:79: esp-idf/spi/CMakeFiles/__idf_spi.dir/spi.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7589: esp-idf/spi/CMakeFiles/__idf_spi.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
/home/fus/Documents/DO-AN-02/comDriver/i2c/i2c.c:3:9: note: '#pragma message: i2c.c is compiling...'
    3 | #pragma message("i2c.c is compiling...")
      |         ^~~~~~~
make: *** [Makefile:136: all] Error 2
